[package]
name = "image_duplicates"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
eframe = { version = "0.27.2", features = ["default"] }
egui_extras = { version = "0.27.2", features = ["default", "file", "image"] }
image = { version = "0.24", features = ["jpeg", "png"] } # 0.24 for egui_extras
rfd = "0.14.1"
rayon = "1.10.0"
color-eyre = "0.6.3"
crossbeam = "0.8.4"
itertools = "0.13.0"
lazy_static = "1.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"

[profile.release]
codegen-units = 1 # this will slow down the built, but give a 15% increase in performance.
opt-level = 3
strip = "full"
lto = "fat"
panic = "abort"
